--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
 
         <a-assets>
-            <video src="mov_bbb.mp4"
+            <video src="https://github.com/andyesgrove/FirstThreeApp_V_003/blob/main/mov_bbb.mp4"
                 preload="auto" id="vid" response-type="arraybuffer" loop
                 crossorigin webkit-playsinline autoplay muted playsinline>
             </video>
@@ -63,7 +63,7 @@
 
         <a-nft
             videohandler
-            type='nft' url='../../data/dataNFT/pinball'
+            type='nft' url='https://github.com/andyesgrove/FirstThreeApp_V_003/blob/main/pinball.jpg?raw=true'
             smooth="true" smoothcount="10" smoothtolerance="0.01" smooththreshold="5"
         >
             <a-video
