--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   >
     <a-nft
       type="nft"
-      url="https://raw.githubusercontent.com/andyesgrove/FirstThreeApp_V_003/refs/heads/main/pinball.jpg"
+      url="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
