--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
   >
     <a-nft
       type="nft"
-      url="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
+      
+        url="https://github.com/andyesgrove/FirstThreeApp_V_003/blob/main/Whyteleafelogo.png"
+      
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
