--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <a-nft
       type="nft"
       
-        url="https://github.com/andyesgrove/FirstThreeApp_V_003/blob/main/Whyteleafelogo.png"
-      
+        url="https://github.com/andyesgrove/FirstThreeApp_V_003/blob/main/Whyteleafelogo"
+
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
