--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <a-nft
       type="nft"
       
-        url="https://github.com/andyesgrove/FirstThreeApp_V_003/blob/main/Whyteleafelogo"
+        url="https://github.com/andyesgrove/FirstThreeApp_V_003/blob/main/Whyteleafelogo.png"
 
       smooth="true"
       smoothCount="10"
