--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <a-nft
       type="nft"
       
-        url="https://github.com/andyesgrove/FirstThreeApp_V_003/blob/main/Whyteleafelogo.png"
+      url="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
 
       smooth="true"
       smoothCount="10"
