--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       url="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
 
       smooth="true"
-      smoothCount="10"
-      smoothTolerance=".01"
-      smoothThreshold="5"
+      smoothcount="10"
+      smoothtolerance=".01"
+      smooththreshold="5"
     >
       <a-entity
         gltf-model="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
