--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <a-nft
       type="nft"
       
-      url="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
+      url="https://raw.githubusercontent.com/andyesgrove/FirstThreeApp_V_003/5f7a19acf4c8cfff7e32f0e91b7a49a6bb5c96ba/Whyteleafelogo.png"
 
       smooth="true"
       smoothcount="10"
