--- a/index.html
+++ b/index.html
@@ -74,18 +74,19 @@
       type="nft"
       url="https://raw.githubusercontent.com/andyesgrove/FirstThreeApp_V_003/main/Whyteleafelogo"
       smooth="true"
-      smoothCount="20"
-      smoothTolerance=".5"
-      smoothThreshold="10"
+      smoothCount="30"
+      smoothTolerance="1"
+      smoothThreshold="15"
     >
-      <!-- 3D Model -->
-      <a-entity
-        gltf-model="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-        scale="5 5 5"
-        position="0 0 0"
-        rotation="0 0 0"
-      >
-      </a-entity>
+      <!-- 3D Text -->
+      <a-text
+        value="NEXT FIXTURE"
+        color="#FF0000"
+        align="center"
+        width="200"
+        position="0 50 0"
+        rotation="-90 0 0"
+      ></a-text>
     </a-nft>
     
     <!-- Camera -->
