--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
       type="nft"
       url="https://raw.githubusercontent.com/andyesgrove/FirstThreeApp_V_003/main/Whyteleafelogo"
       smooth="true"
-      smoothCount="30"
-      smoothTolerance="1"
-      smoothThreshold="15"
+      smoothcount="30"
+      smoothtolerance="1"
+      smooththreshold="15"
     >
       <!-- 3D Text -->
       <a-text
