--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AR NFT Tracking</title>
+  <title>AR Custom Marker Tracking</title>
   
   <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   
   <style>
     body {
@@ -34,62 +34,56 @@
       color: white;
     }
     
-    /* Instructions overlay */
     .instructions {
       position: absolute;
       top: 10px;
       left: 10px;
       background-color: rgba(0, 0, 0, 0.7);
       color: white;
-      padding: 10px;
+      padding: 15px;
       border-radius: 5px;
       font-family: Arial, sans-serif;
       font-size: 14px;
       z-index: 1000;
-      max-width: 300px;
+      max-width: 320px;
     }
   </style>
 </head>
 <body>
-  <!-- Loading indicator -->
   <div class="arjs-loader">
     <div>Loading AR experience, please wait...</div>
   </div>
   
-  <!-- Instructions -->
   <div class="instructions">
     <strong>Instructions:</strong><br>
-    Point your camera at the Whyteleafe logo image to see the 3D model appear.
+    1. Print the Whyteleafe marker pattern<br>
+    2. Point your camera at the printed marker<br>
+    3. Keep the marker flat and well-lit<br>
+    <small>(Much more stable than image tracking!)</small>
   </div>
   
-  <!-- AR Scene -->
   <a-scene
     vr-mode-ui="enabled: false"
     renderer="logarithmicDepthBuffer: true; precision: medium;"
     embedded
-    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
   >
-    <!-- NFT Marker -->
-    <a-nft
-      type="nft"
-      url="https://raw.githubusercontent.com/andyesgrove/FirstThreeApp_V_003/main/Whyteleafelogo"
-      smooth="true"
-      smoothcount="300"
-      smoothtolerance="10"
-      smooththreshold="150"
+    <!-- Custom Whyteleafe Marker -->
+    <a-marker
+      type="pattern"
+      url="https://raw.githubusercontent.com/andyesgrove/FirstThreeApp_V_003/main/pattern-Whyteleafelogo.patt"
     >
       <!-- 3D Text -->
       <a-text
         value="NEXT FIXTURE"
         color="#FF0000"
         align="center"
-        width="800"
-        position="0 0 0"
+        width="4"
+        position="0 0.5 0"
         rotation="-90 0 0"
       ></a-text>
-    </a-nft>
+    </a-marker>
     
-    <!-- Camera -->
     <a-entity camera></a-entity>
   </a-scene>
 </body>
