--- a/index.html
+++ b/index.html
@@ -74,14 +74,24 @@
       type="pattern"
       url="https://raw.githubusercontent.com/andyesgrove/FirstThreeApp_V_003/main/pattern-Whyteleafelogo.patt"
     >
-      <!-- 3D Text -->
+      <!-- Test box to verify tracking -->
+      <a-box
+        position="0 0.5 0"
+        color="#00FF00"
+        width="0.5"
+        height="0.5"
+        depth="0.5"
+      ></a-box>
+      
+      <!-- 3D Text - Full width of marker -->
       <a-text
         value="NEXT FIXTURE"
         color="#FF0000"
         align="center"
-        width="4"
-        position="0 0.5 0"
+        width="2"
+        position="0 0 0"
         rotation="-90 0 0"
+        scale="1.5 1.5 1.5"
       ></a-text>
     </a-marker>
     
