--- a/index.html
+++ b/index.html
@@ -56,14 +56,8 @@
   </div>
   
   <div class="instructions">
-    <strong>Setup Required:</strong><br>
-    1. You need to compile your logo into a .mind file<br>
-    2. Visit: <a href="https://hiukim.github.io/mind-ar-js-doc/tools/compile" target="_blank">MindAR Compiler</a><br>
-    3. Upload your Whyteleafelogo.png<br>
-    4. Download the generated .mind file<br>
-    5. Upload it to your GitHub repo<br>
-    <br>
-    <strong>Note:</strong> This method is MUCH more stable than NFT!
+    <strong>Instructions:</strong><br>
+    Point your camera at the Whyteleafe logo to see AR content appear!
   </div>
   
   <a-scene
