--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
     vr-mode-ui="enabled: false"
   >
-    <!-- Custom Whyteleafe Pattern Marker -->
+    <!-- Custom Whyteleafe Pattern Marker with Border -->
     <a-marker
       type="pattern"
-      url="https://raw.githubusercontent.com/andyesgrove/FirstThreeApp_V_003/main/pattern-Whyteleafelogo.patt"
+      url="https://raw.githubusercontent.com/andyesgrove/FirstThreeApp_V_003/main/pattern-WhyteleafelogoBorder.patt"
     >
       <!-- Green test box -->
       <a-box
