--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
     vr-mode-ui="enabled: false"
   >
     <!-- Using Hiro for testing - works reliably on iOS -->
-    <a-marker preset="hiro">
-      <!-- Green test box -->
+<a-marker type="pattern" url="https://raw.githubusercontent.com/andyesgrove/FirstThreeApp_V_003/main/pattern-WhyteleafelogoBorder.patt">      <!-- Green test box -->
       <a-box
         position="0 0.5 0"
         color="#00FF00"
