--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
   </head>
   <body>
-    <a-scene mindar-image="filterMinCF:0.1; filterBeta: 10" mindar-image="imageTargetSrc: https://raw.githubusercontent.com/andyesgrove/FirstThreeApp_V_003/main/targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: https://raw.githubusercontent.com/andyesgrove/FirstThreeApp_V_003/main/targets.mind; filterMinCF:0.1; filterBeta: 10;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
         
       <a-assets>
