--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       
       <a-entity mindar-image-target="targetIndex: 0">
-        <!-- Background Card -->
-        <a-plane color="#1a1a1a" position="0 0 0" height="1.2" width="1.8" rotation="0 0 0"></a-plane>
+        <!-- Background Card 
+        <a-plane color="#1a1a1a" position="0 0 0" height="1.2" width="1.8" rotation="0 0 0"></a-plane>-->
         
         <!-- Header -->
         <a-text id="header" value="NEXT FIXTURE" color="#FF0000" align="center" width="2.5" position="0 0.5 0.01"></a-text>
